Initial decoupling of party info from node info domain object.